--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <h2 data-lang-key="clients-title">Clientes y Partners</h2>
         <div class="partners">
             <div class="card">
-                <img src="radaz.webp" alt="Radaz Logo" class="partner-logo">
+                <img src="radaz.png" alt="Radaz Logo" class="partner-logo">
                 <h3>Radaz</h3>
                 <p data-lang-key="partner-radaz-desc">Empresa de tecnología de radares para soluciones avanzadas en minería y energía.</p>
             </div>
@@ -498,7 +498,7 @@
                 'sector1-title': 'Mineração',
                 'sector1-desc': 'Inovação operacional, monitoramento de rejeitos, sensores, drones, transporte de água e minerais.',
                 'sector2-title': 'Energia',
-                'sector2-desc': 'Soluções em energias renováveis, armazenamento, transmissão, eficiência energética e digitalização.',
+                'sector2-desc': 'Soluções em energías renováveis, armazenamento, transmissão, eficiência energética e digitalização.',
                 'sector3-title': 'Meio Ambiente',
                 'sector3-desc': 'Gestão ambiental, controle de riscos, monitoramento hídrico, tecnologias de sustentabilidade.',
                 'sector4-title': 'Defesa',
