--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <h2 data-lang-key="clients-title">Clientes y Partners</h2>
         <div class="partners">
             <div class="card">
-                <img src="radaz.png" alt="Radaz Logo" class="partner-logo">
+                <img src="Radaz.png" alt="Radaz Logo" class="partner-logo">
                 <h3>Radaz</h3>
                 <p data-lang-key="partner-radaz-desc">Empresa de tecnología de radares para soluciones avanzadas en minería y energía.</p>
             </div>
@@ -550,3 +550,4 @@
     </script>
 </body>
 </html>
+
