--- a/index.html
+++ b/index.html
@@ -379,7 +379,12 @@
         <h2 data-lang-key="clients-title">Clientes y Partners</h2>
         <div class="partners">
             <div class="card">
-                <img src="Radaz.png" alt="Radaz Logo" class="partner-logo">
+                <!-- Imagen dinámica: prueba varias variantes de nombre hasta que cargue -->
+                <img
+                    alt="Radaz Logo"
+                    class="partner-logo partner-logo-dynamic"
+                    data-filenames='["Radaz.png","radaz.png","RADAZ.png","Radaz.PNG","radaz.PNG"]'
+                >
                 <h3>Radaz</h3>
                 <p data-lang-key="partner-radaz-desc">Empresa de tecnología de radares para soluciones avanzadas en minería y energía.</p>
             </div>
@@ -393,6 +398,49 @@
         <p data-lang-key="footer">© 2025 Ergesa SPA — Santiago, Chile | Todos los derechos reservados.</p>
     </footer>
     <script>
+        // Script para cargar imagen dinámica de Radaz
+        /**
+         * Intentar cargar la primera variante del array que exista.
+         * Busca el elemento <img class="partner-logo-dynamic"> y le asigna el src correcto.
+         */
+        (function(){
+            const imgs = document.querySelectorAll('img.partner-logo-dynamic');
+            imgs.forEach(img => {
+                // Obtener la lista de nombres desde data attribute o usar por defecto
+                const namesAttr = img.getAttribute('data-filenames');
+                let candidates;
+                try {
+                    candidates = namesAttr ? JSON.parse(namesAttr) : ["Radaz.png","radaz.png"];
+                } catch(e) {
+                    candidates = ["Radaz.png","radaz.png"];
+                }
+                // Añadimos variantes con ./ para evitar confusión de rutas
+                candidates = candidates.flatMap(n => [n, "./" + n]);
+                let tried = 0;
+                const tryNext = () => {
+                    if (tried >= candidates.length) {
+                        // Ninguna cargó: mostramos alt (o ocultamos)
+                        img.style.display = 'none';
+                        return;
+                    }
+                    const candidate = candidates[tried++];
+                    const tester = new Image();
+                    tester.onload = function() {
+                        // Si carga correctamente, asignar al img real
+                        img.src = candidate;
+                        img.style.display = ''; // asegurarse visible
+                    };
+                    tester.onerror = function() {
+                        // probar siguiente candidato
+                        tryNext();
+                    };
+                    // Intentamos cargar
+                    tester.src = candidate;
+                };
+                tryNext();
+            });
+        })();
+
         // Traducciones (actualizadas)
         const translations = {
             es: {
@@ -498,9 +546,9 @@
                 'sector1-title': 'Mineração',
                 'sector1-desc': 'Inovação operacional, monitoramento de rejeitos, sensores, drones, transporte de água e minerais.',
                 'sector2-title': 'Energia',
-                'sector2-desc': 'Soluções em energías renováveis, armazenamento, transmissão, eficiência energética e digitalização.',
+                'sector2-desc': 'Soluções em energias renováveis, armazenamento, transmissão, eficiência energética e digitalização.',
                 'sector3-title': 'Meio Ambiente',
-                'sector3-desc': 'Gestão ambiental, controle de riscos, monitoramento hídrico, tecnologias de sustentabilidade.',
+                'sector3-desc': 'Gestão ambiental, controle de riesgos, monitoramento hídrico, tecnologias de sustentabilidade.',
                 'sector4-title': 'Defesa',
                 'sector4-desc': 'Importação de instrumentos especializados e novas tecnologias para operações de defesa e segurança.',
                 'clients-title': 'Clientes e Partners',
@@ -550,4 +598,3 @@
     </script>
 </body>
 </html>
-
